fix: Height of `MainMenu`'s auxilliary menu on small-yet-tall screens

--- a/modules/hanna-css/src/css/MainMenu.scss
+++ b/modules/hanna-css/src/css/MainMenu.scss
@@ -59,6 +59,8 @@
   }
   .MainMenu {
     position: relative;
+    display: flex;
+    flex-flow: column;
 
     background-color: #{$var--MainMenu-background};
 
